[package]
name = "rutree2"
version = "0.1.0"
edition = "2024"
description = "A Rust command-line tool inspired by lstree for displaying directory structures in a tree format"
license = "MIT"
readme = "README.md"
repository = "https://github.com/npequeux/rutree2"
homepage = "https://github.com/npequeux/rutree2"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
