[package]
name = "rutree2"
version = "1.4.0"
edition = "2024"
description = "A Rust command-line tool inspired by lstree for displaying directory structures in a tree format"
license = "MIT"
readme = "README.md"
repository = "https://github.com/npequeux/rutree2"
homepage = "https://npequeux.github.io/rutree2"

[dependencies]

clap = { version = "4.5", features = ["derive"] }
colored = "3.1"
crossterm = "0.29.0"
ratatui = "0.30.0"

[dev-dependencies]
tempfile = "3.9"
